<resources>
    <string name="setting_language_auto">跟随系统</string>
    <string name="setting_language_english">English</string>
    <string name="setting_simplified_chinese">简体中文</string>
    <string name="setting_traditional_chinese">繁體中文</string>
    <string name="forward">发给朋友</string>
    <string name="save_img">保存到本地</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="saved_album">已保存在相册</string>
    <string name="loading">正在加载中</string>
    <string name="base_unknow_msg">[未知消息，请先升级客户端后查看]</string>
    <string name="refresh_footer">- 到底了 -</string>
    <string name="base_withdraw">撤回</string>
    <string name="base_forward">转发</string>
    <string name="base_delete">删除</string>
    <string name="sure">确定</string>
    <string name="multiple_choice">多选</string>
    <string name="msg_reply">回复</string>
    <string name="re_edit">重新编辑</string>
    <string name="user_revoke_msg">\"%s\"撤回了一条消息</string>
    <string name="manager_revoke_user_msg">你撤回了一条成员 \"%s\" 的消息</string>
    <string name="manager_revoke_user_msg1"> %s 撤回了一条成员的消息</string>
    <string name="my_revoke_msg">你撤回了一条消息</string>
    <string name="max_choose_msg_count">最多选择100条消息</string>
    <string name="str_success">成功</string>
    <string name="common_emoji">最近使用</string>
    <string name="all_emoji">所有表情</string>
    <string name="str_send">发送</string>
    <string name="str_base_reply">评论</string>
    <string name="str_search">搜索</string>
    <string name="b_complete">完成</string>
    <string name="str_save">保存</string>
    <string name="str_delete">删除</string>
    <string name="str_edit">编辑</string>
    <string name="str_resend_msg_tips">消息发送失败，确定重发消息？</string>
    <string name="str_forward">已转发</string>
    <string name="str_base_tips">提示</string>
    <string name="str_choose">选择</string>
    <string name="local_already_exists">本地已存在</string>
    <string name="str_just">刚刚</string>
    <string name="str_min">%s分钟</string>
    <string name="yesterday">昨天</string>
    <string name="crop">裁剪</string>
    <string name="nodata">暂无数据</string>
    <string name="you">你</string>
    <string name="download_err">下载失败</string>
    <string name="is_new_version">当前已是最新版本</string>
    <string name="version_desc">更新说明</string>
    <string name="find_new_version">发现新版本</string>
    <string name="update_now">立即升级</string>
    <string name="new_version">最新版本</string>
    <string name="kit_user_agreement">用户协议</string>
    <string name="kit_privacy_policy">隐私政策</string>
    <string name="check_new_version">检查新版本</string>
    <string name="about">关于</string>
    <string name="time_am">上午</string>
    <string name="time_pm">下午</string>
    <string name="str_msg_content_sticker">[贴纸]</string>
    <string name="copy">复制</string>
    <string name="copyed">已复制</string>
    <string name="blacklist_group">群内黑名单，消息发送失败，确定重发吗？</string>
    <string name="blacklist_user">黑名单用户，消息发送失败，确定重发吗？</string>
    <string name="no_relation_user">对方非好友关系，消息发送失败，确定重发吗？</string>
    <string name="no_relation_group">未在群内，消息发送失败，确定重发吗？</string>
    <string name="no_group_blacklist_noselect">该好友在群内黑名单内，不可勾选</string>
    <string name="str_all">所有</string>
    <string name="messages_encryption">用户之间的消息将受到端对端加密保护</string>
    <string name="init_data">正在初始化数据</string>
    <string name="str_signal_decrypt_err">[消息解密失败，无法查看]</string>
    <string name="str_content_format_err">[消息格式错误，无法查看]</string>
    <string name="str_forget_pwd">忘记密码</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saterday">周六</string>
    <string name="sunday">周日</string>
    <string name="max_file_size"> 最大支持500M</string>
    <string name="min_file_size">不支持的文件</string>
    <string name="authorization_request">权限申请</string>
    <string name="to_set">去设置</string>
    <string name="contact_permissions_des">在设置-应用-%s-权限中开读取手机联系人权限。以正常使用联系人查找功能</string>
    <string name="microphone_permissions_des">在设置-应用-%s-权限中开启麦克风权限。以正常使用语音、音视频通话、小视频等功能</string>
    <string name="file_permissions_des">在设置-应用-%s-权限中开启存储空间权限。以正常使用文件发送等功能</string>
    <string name="camera_permissions_desc">在设置-应用-%s-权限中开启相机权限。以正常使用拍摄、小视频、扫一扫等功能</string>
    <string name="location_permissions_desc">在设置-应用-%s-权限中开启位置信息权限。以正常使用位置共享、搜索等功能</string>
    <string name="album_permissions_desc">在设置-应用-%s-权限中开启存储空间权限。以正常使用在聊天、朋友圈、设置头像、设置聊天背景图片等功能中的图片查看和选择能力。</string>
    <string name="notification_permissions_desc">在设置-应用-%s-权限中开启通知权限。以收到新消息时能及时提醒你。</string>
    <string name="call_phone_permissions_desc">在设置-应用-%s-权限中开启拨打电话延续。以正常使用拨号功能</string>
    <string name="scan_qr_code">识别图中二维码</string>
    <string name="favorite">收藏</string>
    <string name="show_in_chat">定位到聊天</string>
    <string name="edited">已编辑</string>
    <string name="phone_tips">可能是%s号或电话号码，你可以</string>
    <string name="email_tips">可能是%s号或邮箱账号，你可以</string>
    <string name="send_email">写邮件</string>
    <string name="call">呼叫</string>
    <string name="add_to_phone_book">添加到手机通讯录</string>
    <string name="msg_read_count">%d已读</string>
    <string name="forbidden_can_not_resend">禁言中无法重发消息</string>
    <string name="copy_url">复制链接</string>
    <string name="open_system_browser">系统浏览器打开</string>
    <string name="refresh">刷新</string>
    <string name="unknow_msg_type">[未知消息]</string>
    <string name="str_create">创建</string>
    <string name="restart_app_desc">需重启应用后配置才可生效，是否立即重启应用？</string>
    <string name="str_request">申请</string>
    <string name="str_request_desc">%s的昵称头像</string>
    <string name="str_get_name_avatar">获取你的昵称、头像</string>
    <string name="msg_send_fail">消息发送失败</string>
    <string name="msg_send_fail_resend">重新发送</string>
    <string name="str_you">你</string>
    <string name="str_delete_message">删除消息</string>
    <string name="str_delete_message_tip">您确定要删除这条消息吗？</string>
    <string name="str_delete_message_also_to">同时为 %s 删除</string>
    <string name="str_delete_message_for_all">为所有成员删除</string>
    <string name="content_too_long">内容太长</string>
    <string name="video_deleted">视频不存在或已被删除</string>
    <string name="can_not_play_video_with_revoke">视频已被撤回，无法播放</string>
    <string name="wk_video">视频</string>
    <string name="last_message_file">[文件]</string>
</resources>
