<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingTop="15dp"
    android:paddingEnd="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center|start">

        <com.chat.base.ui.components.AvatarView
            android:id="@+id/appIV"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/appNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="当前网页需要授权 "
            android:textColor="@color/colorDark"
            android:textSize="@dimen/font_size_12"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_request"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/font_size_12"
            android:textStyle="normal" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/str_get_name_avatar"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/font_size_18"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <com.chat.base.ui.components.AvatarView
            android:id="@+id/avatarView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="skls"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/font_size_16" />

            <TextView
                android:id="@+id/descTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="skls"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_14" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            style="@style/buttonNormal"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/clrCCC"
            android:text="@string/cancel"
            android:textColor="@color/colorDark"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sureBtn"
            style="@style/buttonNormal"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/sure"
            app:cornerRadius="8dp" />
    </LinearLayout>
</LinearLayout>