<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_ardius_home_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/forwardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/layout_bg_white_5"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/forwardIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tint="@color/popupTextColor"
                    android:src="@mipmap/ic_ab_forward" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/forward"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/favoriteView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/layout_bg_white_5"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/favoriteIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tint="@color/popupTextColor"
                    android:src="@mipmap/ic_ab_fave" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/favorite"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/downloadView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/layout_bg_white_5"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:id="@+id/downloadIV"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tint="@color/popupTextColor"
                    android:src="@mipmap/msg_gallery" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/save_img"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/editView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/layout_bg_white_5"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editIV"
                    android:tint="@color/popupTextColor"
                    android:layout_gravity="center"
                    android:src="@mipmap/group_edit" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_edit"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/showInChatLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/showInChatView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/layout_bg_white_5"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/showInChatIV"
                    android:tint="@color/popupTextColor"
                    android:src="@mipmap/msg_message" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/show_in_chat"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_12" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/qrView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/layout_bg_white_5"
        android:padding="10dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/qrIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/popupTextColor"
            android:src="@mipmap/msg_qrcode" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/scan_qr_code"
            android:textColor="@color/popupTextColor"
            android:textSize="@dimen/font_size_14" />

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/arrow_right_iv"
            android:tint="@color/popupTextColor"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/cancelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textColor="@color/popupTextColor"
        android:textSize="16sp" />
</LinearLayout>