<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radian_normal_layout"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/searchIv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:src="@mipmap/ic_ab_search" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/searchEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:background="@color/transparent"
                android:focusable="true"
                android:gravity="center_vertical"
                android:hint="@string/str_search"
                android:imeOptions="actionSearch"
                android:maxLines="1"
                android:minHeight="40dp"
                android:singleLine="true"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/color999"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/cancelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/popupTextColor"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/uikit_search_specified_content"
            android:textColor="@color/color999"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/typeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:overScrollMode="never" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/noDataTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/nodata" />

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            app:srlEnableFooterFollowWhenLoadFinished="true"
            app:srlEnableScrollContentWhenLoaded="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:visibility="visible" />

            <com.scwang.smart.refresh.footer.ClassicsFooter
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/homeColor"
                app:srlTextNothing="@string/refresh_footer" />
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
    </LinearLayout>
</LinearLayout>